k8s-mediaserver/jackett/jackett_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "5"
    meta.helm.sh/release-name: k8smediaserver-sample
    meta.helm.sh/release-namespace: default
  creationTimestamp: "2023-07-16T03:07:34Z"
  generation: 5
  labels:
    app.kubernetes.io/instance: k8smediaserver-sample
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: k8s-mediaserver
    app.kubernetes.io/version: 1.16.0
    helm.sh/chart: k8s-mediaserver-0.7.0
  name: jackett
  namespace: default
  ownerReferences:
  - apiVersion: charts.kubealex.com/v1
    blockOwnerDeletion: true
    controller: true
    kind: K8SMediaserver
    name: k8smediaserver-sample
    uid: f52bdd6a-8840-4acc-9309-f004c4e68b14
  resourceVersion: "1153790"
  uid: 9350e4ff-11dd-4506-9484-894742cdb6db
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: k8smediaserver-sample
      app.kubernetes.io/name: k8s-mediaserver
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2023-07-17T03:08:53-04:00"
      creationTimestamp: null
      labels:
        app: jackett
        app.kubernetes.io/instance: k8smediaserver-sample
        app.kubernetes.io/name: k8s-mediaserver
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: jackett-config
        image: docker.io/linuxserver/jackett:latest
        imagePullPolicy: Always
        name: k8s-mediaserver
        ports:
        - containerPort: 9117
          name: jackett-port
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          tcpSocket:
            port: 9117
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /config
          name: mediaserver-volume
          subPath: config/jackett
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: mediaserver-volume
        persistentVolumeClaim:
          claimName: mediaserver-pvc-redux
      - configMap:
          defaultMode: 493
          name: init-jackett-cm
        name: init-files-jackett
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2023-07-17T05:32:11Z"
    lastUpdateTime: "2023-07-17T05:32:11Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2023-07-17T05:31:29Z"
    lastUpdateTime: "2023-07-17T07:12:34Z"
    message: ReplicaSet "jackett-6c6d86d949" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 5
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
