k8s-mediaserver/jackett/jackett_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jackett
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: 
    - websecure
  routes:
    - match: Host(`jackett.local.izroll.dev`)
      kind: Rule
      services:
        - name: jackett
          port: 9117
  tls:
    secretName: local-izroll-dev-tls
